[2.1.20]
- Fixed a bug that could cause filtering by taxonomy to malfunction for BLAST databases
  (present since v2.1.18).
- Fixed a memory leak (present since v2.1.19).

[2.1.19]
- Improved performance of the searching alignments stage and fixed a potential
  performance issue present since v2.1.15.
- Fixed search paths for SQLite3 on Ubuntu.
- Fixed a crash when using the `--parallel-tmpdir` option for clustering.

[2.1.18]
- Improved performance when using BLAST databases.
- BLAST format is now the recommended database format for best performance.
- Fixed missing sequence ids for some BLAST databases.
- Fixed CMake 2.8 errors.
- Fixed compiler errors for GCC 4.8.5.
- Added the `--load-threads` option to set number of CPU threads for file I/O.
- Added the `--minichunk` option to set chunk size for file I/O.
- Fixed a race condition (present since v2.1.15).
- Fixed a memory leak (present since v2.1.15).
- Added deduplication for the `staxids` output field for BLAST databases.

[2.1.17]
- Added (tabular/json) output fields sRANK to print taxonomy nodes of the given rank
  associated with the subject sequence, where RANK can be any rank in the NCBI taxonomy,
  e.g. sdomain, skingdom, sphylum, sorder, sgenus, sspecies, etc.
- Using BLAST databases is now universally supported (including taxonomy features),
  without depending on the NCBI toolkit.
- SQLite3 is now a required dependency for compilation.
- Added line breaks for the `getseq` workflow at 80 letters per line.
- Removed the `BLAST_LIBRARY_DIR` and `BLAST_INCLUDE_DIR` CMake options.
- Fixed a `Missing taxdb` error message when using BLAST databases.
- When filtering a database by taxonomy, the letter count for computing
  e-values will now correctly refer to the filtered subset.
- Removed support for BLAST alias databases filtered by GI numbers and filtered using a
  binary-formatted seqid list (`.bsl` file extension).
- Added support for soft masking using the SEG algorithm (`--soft-masking seg`).