@@ -261,11 +261,11 @@ endif(X86)
 #endif(ARM)
 
 check_symbol_exists(getauxval "sys/auxv.h" HAVE_GETAUXVAL)
-if(CMAKE_SYSTEM_PROCESSOR MATCHES "^(aarch64|arm64)$")
+if(AARCH64)
   add_definitions(-DWITH_NEON)
   add_library(arch_neon OBJECT ${DISPATCH_OBJECTS})
   target_compile_options(arch_neon PUBLIC -DDISPATCH_ARCH=ARCH_NEON -DARCH_ID=4 -D__ARM_NEON -D__aarch64__)
-elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "^arm")
+elseif(ARM)
   check_cxx_compiler_flag("-mfpu=neon" HAVE_MFPU_NEON)
   if(HAVE_MFPU_NEON)
     add_definitions(-DWITH_NEON)
@@ -475,11 +475,10 @@ if(X86)
     add_executable(diamond $<TARGET_OBJECTS:arch_generic> $<TARGET_OBJECTS:arch_sse4_1> $<TARGET_OBJECTS:arch_avx2> ${OBJECTS} ${ZSTD_OBJ})
   endif()
 elseif(ARM OR AARCH64)
-  if(HAVE_MFPU_NEON)
-     message(STATUS "Using NEON architecture")
-     add_executable(diamond $<TARGET_OBJECTS:arch_generic> $<TARGET_OBJECTS:arch_neon> ${OBJECTS} ${ZSTD_OBJ})
+  if(AARCH64 OR HAVE_MFPU_NEON)
+    add_executable(diamond $<TARGET_OBJECTS:arch_generic> $<TARGET_OBJECTS:arch_neon> ${OBJECTS} ${ZSTD_OBJ})
   else()
-     add_executable(diamond $<TARGET_OBJECTS:arch_generic> ${OBJECTS} ${ZSTD_OBJ})
+    add_executable(diamond $<TARGET_OBJECTS:arch_generic> ${OBJECTS} ${ZSTD_OBJ})
   endif()
 else()
   add_executable(diamond $<TARGET_OBJECTS:arch_generic> ${OBJECTS} ${ZSTD_OBJ})
